--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@rails/webpacker": "3.5",
     "babel-preset-react": "^6.24.1",
     "coffeescript": "1.12.7",
+    "mathjax": "^2.7.5",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
