--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "chart.js": "^2.7.3",
     "i18n-js": "^3.0.11",
     "jquery": "^3.3.1",
+    "jquery-ui": "^1.12.1",
     "marked": "^0.5.1",
     "moment": "^2.22.2",
     "mousetrap": "^1.6.2",
